--- a/index.html
+++ b/index.html
@@ -1,12 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Weather App</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="src/styles.css" />
+    <link rel="stylesheet" href="src/index.js" />
     <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+        <form class="search-bar">
+          <div class="row">
+            <div class="col-6">
+              <input
+                type="search"
+                placeholder="Enter a city.."
+                autofocus="on"
+                autocomplete="off"
+                class="form-control shadow"
+                id="city-input"
+              />
+            </div>
+            <div class="col-3">
+              <input
+                type="submit"
+                value="Search"
+                class="form-control btn btn-light shadow-sm w-100"
+                id="search-form"
+              />
+            </div>
+            <div class="col-3">
+              <button
+                class="btn btn-dark shadow-sm w-100"
+                id="current-location-button"
+              >
+                Current
+              </button>
+      </form>
+    </div>
+    <br />
+    <h1 id="city"></h1>
+        <ul>
+          <li id="date"></li>
+          <li id="description"></li>
+        </ul>
+        <div class="row">
+          <div class="col-6">
+            <div class="clearfix">
+              <div class="float-left">
+                <span class="temperature" id="temperature"></span
+                ><span class="units">°C</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-6">
+            <ul>
+              <li>Humidity: <span id="humidity"></span>%</li>
+              <li>Wind: <span id="wind"></span> km/h</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+    <br />
+    <div class="row row-cols-1 row-cols-md-5 g-5">
+      <div class="col">
+        <div class="card h-100">
+          <img src="images/thunderstorm.jpg" class="card-img-top" />
+          <div class="card-body">
+            <h5 class="card-title">Mon.</h5>
+            <p class="card-text">51&deg;/37&deg;</p>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="images/partlysunny.jpg" class="card-img-top" />
+          <div class="card-body">
+            <h5 class="card-title">Tues.</h5>
+            <p class="card-text">49&deg;/38&deg;</p>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="images/partlysunny.jpg" class="card-img-top" />
+          <div class="card-body">
+            <h5 class="card-title">Wed.</h5>
+            <p class="card-text">52&deg;/34&deg;</p>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="images/mostlysunny.jpg" class="card-img-top" />
+          <div class="card-body">
+            <h5 class="card-title">Thurs.</h5>
+            <p class="card-text">59&deg;/42&deg;</p>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="images/partlysunny.jpg" class="card-img-top" />
+          <div class="card-body">
+            <h5 class="card-title">Fri.</h5>
+            <p class="card-text">55&deg;/42&deg;</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
