--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="src/styles.css" />
-    <link rel="stylesheet" href="src/index.js" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="script.js" />
     <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
   </head>
   <body>
@@ -43,8 +43,7 @@
               >
                 Current
               </button>
-      </form>
-    </div>
+            </div>
     <br />
     <h1 id="city"></h1>
         <ul>
@@ -68,7 +67,7 @@
           </div>
         </div>
       </div>
-    </div>
+      </form>
     <br />
     <div class="row row-cols-1 row-cols-md-5 g-5">
       <div class="col">
